--- a/index.css
+++ b/index.css
@@ -64,11 +64,11 @@ nav ul li a:hover::after{
 .intro-text h1
 {
     font-size: 50px;
-    margin-top: 20px;
+    margin: 20px 0px 10px 0px;
 }
 .intro-text h1 span
 {
-    color:#ff004f;
+    color:#ee0750;
 }
 
 
@@ -82,17 +82,21 @@ nav ul li a:hover::after{
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    padding-left:10px;
 }
 .about-col-1
 {
    /*  border: 2px solid rgb(60, 0, 255);  */
     flex-basis: 35%;   
 
+
 } 
 .about-col-1 img
 {
     width: 100%;
-    border:1px solid #ff004f;
+   
+    box-shadow:  0px 0px 20px  #4d4a4b  ;
+    border-radius: 15px;
 }
 .about-col-2
 {
@@ -191,6 +195,7 @@ nav ul li a:hover::after{
     font-size:60px;
     font-weight: bold;
     color:#fff;
+    margin-left:20px;
 }
 .services-list
 {
