--- a/index.css
+++ b/index.css
@@ -196,7 +196,7 @@ nav ul li a:hover::after{
     font-weight: bold;
     color:#fff;
     margin-left:20px;
-    border: 1px solid red;
+    
 }
 .services-list
 {
@@ -249,14 +249,14 @@ nav ul li a:hover::after{
     padding: 30px;
     justify-content:space-between;
     flex-wrap: wrap;
-    border: 1px solid green;
+  /*   border: 1px solid green; */
 }
 
 .contact-left
 {
     padding: 40px; 
     flex-basis: 35%;
-     border: 1px solid blue; 
+    /*  border: 1px solid blue; */ 
 }
 .contact-left p, .social-media-icons, .download-resume
 {
@@ -316,7 +316,6 @@ nav ul li a:hover::after{
     width: 100%;
     display: flex;
     flex-direction: column;
-    border:2px solid red;
 
 }
 .contact-right form input, textarea
